# cazino

./: .gitignore  CLOUDFLARE_DEPLOYMENT.md  Cargo.toml  README.md  UI_FIXES.md  justfile  package.json  wrangler.toml.example
docs/: REFACTOR_ARCH.md
frontend/: .gitkeep
migrations/: 001_initial_schema.sql
scripts/: build_ui.sh  deploy_pages.sh  run_e2e_server.sh  setup_test_room.sh  test_cloudflare.sh  test_ui.sh
src/: lib.rs  main.rs  service.rs
src/api/: mod.rs  models.rs  routes.rs  server.rs  websocket.rs
src/cli/: mod.rs  repl.rs
src/db/: d1.rs  mod.rs  sqlite.rs  trait.rs
src/domain/: mod.rs  models.rs  parimutuel.rs  rules.rs
tests/: README.md  integration_tests.rs  playwright.config.ts  test_api.sh  test_browser_console.js  test_ui_e2e.js  test_websocket.sh
tests/e2e/: cloudflare.spec.ts  full-stack.spec.ts  websocket.spec.ts
ui/: README.md  app.js  config.js  index.html  manifest.json  style.css
worker/: Cargo.toml
worker/src/: d1_database.rs  lib.rs  room.rs
