[package]
name = "cazino"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
futures = "0.3"
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }

# Async trait (for database trait)
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI (optional, for REPL)
clap = { version = "4.4", features = ["derive"] }

# Random (for invite codes)
rand = "0.8"

[dev-dependencies]
# Testing
tokio-test = "0.4"
