[workspace]
members = [".", "worker"]
resolver = "2"

[package]
name = "cazino"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cazino"
path = "src/main.rs"
required-features = ["server"]

[features]
default = ["server"]
server = [
    "axum",
    "tokio",
    "tower",
    "tower-http",
    "futures",
    "dotenvy",
    "clap",
    "tracing-subscriber",
    "sqlite",
]
sqlite = ["dep:sqlx"]
wasm = []
d1 = []

[dependencies]
# Web framework (optional for local dev)
axum = { version = "0.7", features = ["ws", "macros"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"], optional = true }
futures = { version = "0.3", optional = true }
dotenvy = { version = "0.15", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"], optional = true }

# Async trait (for database trait)
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# CLI (optional, for REPL)
clap = { version = "4.4", features = ["derive", "env"], optional = true }

# Random (for invite codes)
rand = "0.8"

# For WASM support - rand depends on getrandom
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
