[package]
name = "cazino"
version = "0.1.0"
edition = "2021"

# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
futures = "0.3"
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }

[[bin]]
name = "cazino"
path = "src/main.rs"
required-features = ["server"]

[features]
default = ["server", "sqlite"]
server = ["axum", "tokio", "tower", "tower-http", "futures", "tokio-stream", "tracing", "tracing-subscriber", "clap"]
sqlite = ["sqlx", "server"]
wasm = []  # For WASM targets, removes Send + Sync bounds from Database trait

[dependencies]
# Always available (core domain logic)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
async-trait = "0.1"

# Optional: Web framework (Axum server)
axum = { version = "0.7", features = ["ws", "macros"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["trace", "cors"], optional = true }
futures = { version = "0.3", optional = true }
tokio-stream = { version = "0.1", optional = true }

# Optional: Tracing
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Optional: SQLite database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"], optional = true }

# Optional: CLI
clap = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
# Testing
tokio-test = "0.4"
