[package]
name = "cazino-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cazino = { path = "..", default-features = false, features = ["wasm", "d1"] }
worker = { version = "0.6", features = ["d1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
async-trait = "0.1"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["MessageEvent", "CloseEvent", "ErrorEvent"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
